--- a/index.html
+++ b/index.html
@@ -211,6 +211,11 @@
                         <li>생성형 AI를 ‘참고자료’로 한정하며 자신의 말투와 맞지 않으면 직접 수정하여 사용했다.</li>
                         <li>AI가 만든 결과를 그대로 사용하는 것에 대한 거부감이 있으며, 빠른 정답 제공이 오히려 성취감을 감소시킨다고 인식했다.</li>
                     </ul>
+                    <!-- Visualisation: Shin Soo-ah Interview Photo -->
+                    <div class="mt-4 text-center">
+                        <img src="src/KakaoTalk_20250610_145848464.jpg" alt="신수아 학생 인터뷰 사진" class="w-full md:w-3/4 lg:w-full mx-auto rounded-xl shadow-lg object-cover">
+                        <p class="text-sm text-[#A9A9A9] mt-2">신수아 학생 인터뷰 진행 모습</p>
+                    </div>
                 </div>
                 <div class="interview-card">
                     <h4 class="interview-name">홍성재 학생</h4>
