--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                     </ul>
                     <!-- Visualisation: Hong Sung-jae Interview Photo -->
                     <div class="mt-4 text-center">
-                        <img src="src/스크린샷 2025-06-10 143801.png" alt="홍성재 학생 인터뷰 사진" class="w-full md:w-3/4 lg:w-full mx-auto rounded-xl shadow-lg object-cover">
+                        <img src="src/unnamed.jpg" alt="홍성재 학생 인터뷰 사진" class="w-full md:w-3/4 lg:w-full mx-auto rounded-xl shadow-lg object-cover">
                         <p class="text-sm text-[#A9A9A9] mt-2">홍성재 학생 인터뷰 진행 모습</p>
                     </div>
                 </div>
