--- a/index.html
+++ b/index.html
@@ -102,12 +102,16 @@
 
     <main class="container">
         <section id="motivation-purpose" class="card">
-            <h2 class="section-title">Ⅰ. 조사 동기와 목적</h2>
+            <h2 class="section-title">Ⅰ. 조사 동기 및 목적</h2>
+            
+            <h3 class="text-xl md:text-2xl font-bold text-[#2A62B6] mb-3">조사 동기</h3>
             <p class="text-base md:text-lg text-[#263238] mb-4">
-                최근 생성형 AI는 일상생활뿐 아니라 교육 환경에도 빠르게 확산되었다. 특히 ChatGPT와 같은 언어 생성형 도구는 글쓰기, 탐색, 번역, 코딩 등 다양한 분야에서 활용도가 높다. 그러나 무비판적인 사용은 사고력 저하, 표절, 정보 왜곡 등 부작용을 유발할 수 있다.
+                우리 반 친구들이 생성형 AI를 얼마나, 그리고 어떻게 사용하고 있는지 궁금했다. 막연하게 '많이 쓰겠지'라고 생각했지만, 실제로 어떤 용도로, 어떤 AI 도구를 주로 사용하는지에 대한 구체적인 정보는 부족했다. 이 조사를 통해 친구들의 AI 활용 실태를 파악하고, 이를 바탕으로 더 효율적이고 책임감 있는 AI 사용 문화를 만들어가는 데 기여하고 싶었다.
             </p>
+
+            <h3 class="text-xl md:text-2xl font-bold text-[#2A62B6] mb-3 mt-6">조사 목적</h3>
             <p class="text-base md:text-lg text-[#263238] font-semibold">
-                이에 본 조사는 고등학생들이 생성형 AI를 윤리적으로 활용하고, 학습 및 진로에 도움이 되는 방향으로 활용할 수 있는 실천적 방법을 모색하는 데 목적을 두었다.
+                본 조사는 1학년 4반 학생들의 생성형 AI 사용 현황을 면밀히 파악하는 데 목적이 있다. 학생들의 주된 AI 활용 목적, 빈도, 그리고 선호하는 AI 도구를 분석하여 데이터를 기반으로 한 이해를 높이고자 한다. 궁극적으로 이 보고서는 학생들이 생성형 AI를 더욱 똑똑하고 올바르게 활용할 수 있는 실질적인 가이드라인을 제시하여, 학습 및 일상생활에서의 긍정적인 변화를 이끌어내는 데 기여할 것이다.
             </p>
         </section>
 
