--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                     <div class="interview-card">
                         <div class="interview-main-content">
                             <div class="interview-photo-wrapper">
-                                <img src="src/수아하윤인터뷰.jpg" onerror="this.onerror=null; this.src='https://placehold.co/400x400/FF9800/FFFFFF?text=신수아+학생+인터뷰';" alt="신수아 학생 인터뷰 사진" class="interview-photo">
+                                <img src="src/수아_인터뷰.png" onerror="this.onerror=null; this.src='https://placehold.co/400x400/FF9800/FFFFFF?text=신수아+학생+인터뷰';" alt="신수아 학생 인터뷰 사진" class="interview-photo">
                             </div>
                             <div class="interview-text-content space-y-4">
                                 <div class="student-name"><h3 class="font-bold text-secondary-orange">1) 신수아</h3></div> <!-- 이름 크기 키움 -->
@@ -385,7 +385,7 @@
                                 </ul>
                             </div>
                             <div class="md:w-1/2 flex justify-center items-center">
-                                <img src="src/스크린샷 2025-06-10 145645.png" onerror="this.onerror=null; this.src='https://placehold.co/600x350/FFB44E/FFFFFF?text=신수아+워드클라우드';" alt="신수아 워드클라우드" class="word-cloud-img">
+                                <img src="src/수아_인터뷰2.png" onerror="this.onerror=null; this.src='https://placehold.co/600x350/FFB44E/FFFFFF?text=신수아+워드클라우드';" alt="신수아 워드클라우드" class="word-cloud-img">
                             </div>
                         </div>
                     </div>
@@ -393,7 +393,7 @@
                     <div class="interview-card">
                         <div class="interview-main-content">
                             <div class="interview-photo-wrapper">
-                                <img src="src/성재인터뷰.jpg" onerror="this.onerror=null; this.src='https://placehold.co/400x400/FF9800/FFFFFF?text=홍성재+학생+인터뷰';" alt="홍성재 학생 인터뷰 사진" class="interview-photo">
+                                <img src="src/성재_인터뷰.png" onerror="this.onerror=null; this.src='https://placehold.co/400x400/FF9800/FFFFFF?text=홍성재+학생+인터뷰';" alt="홍성재 학생 인터뷰 사진" class="interview-photo">
                             </div>
                             <div class="interview-text-content space-y-4">
                                 <div class="student-name"><h3 class="font-bold text-secondary-orange">2) 홍성재</h3></div> <!-- 이름 크기 키움 -->
@@ -424,7 +424,7 @@
                                 </ul>
                             </div>
                             <div class="md:w-1/2 flex justify-center items-center">
-                                <img src="src/홍성재 워드클라우드.png" onerror="this.onerror=null; this.src='https://placehold.co/600x350/FFB44E/FFFFFF?text=홍성재+워드클라우드';" alt="홍성재 워드클라우드" class="word-cloud-img">
+                                <img src="src/성재_인터뷰2.png" onerror="this.onerror=null; this.src='https://placehold.co/600x350/FFB44E/FFFFFF?text=홍성재+워드클라우드';" alt="홍성재 워드클라우드" class="word-cloud-img">
                             </div>
                         </div>
                     </div>
